--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,3 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 #status bar style.
 set -g status-left "#s#S:w#I.p#P##[default]"
 set -g default-terminal "screen-256color"
@@ -6,32 +5,76 @@ set -g default-terminal "screen-256color"
 set -g status-bg black
 set -g status-fg white
 
-# Override default close pane shortcut : x
-# remove requiring confirm
-unbind x
-bind x killp
-
-#Set vim key for moving pane.
-#up
-bind-key k select-pane -U
-#down
-bind-key j select-pane -D
-#left
-bind-key h select-pane -L
-#right
-bind-key l select-pane -R
-
-
-# shortkey for reload config file.
-bind r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
+
+bind D source-file ~/.tmux/mylayout
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# short key for select pane
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
+
+# short key for resizing pane
+bind -r ^k resizep -U 10
+bind -r ^j resizep -D 10
+bind -r ^h resizep -L 10
+bind -r ^l resizep -R 10
+
 # Setup 'v' to begin selection as in Vim （seems require Tmux 1.8）
 # 一般情况中，<prefix>-[ 进入复制模式后 <space> 开始选中，<enter> 结束选中 (copy to buffer)
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+setw -g mode-keys vi
+bind p pasteb
+bind -t vi-copy v begin-selection
+# OS X: brew install reattach-to-user-namespace, we use tmux-yank to support
+# copy content in system clipboard.
+#bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind '"'
+bind - splitw -v
+bind | splitw -h
+
+bind q killp
+bind ^q killw
+
+# mouse support
+#setw -g mouse on #incompatible in tmux 2.1+
+set-option -g -q mouse on
+#set -g mouse-select-pane on #incompatible in tmux 2.1+
+bind -T root MouseDown1Pane select-pane -t=
+#set -g mouse-resize-pane on #incompatible in tmux 2.1+
+unbind -T root MouseDrag1Border # disable drag pane border to resize
+bind -T root MouseDrag1Pane if -Ft= '#{mouse_any_flag}' 'if -Ft= "#{pane_in_mode}" "copy-mode -M" "send-keys -M"' 'copy-mode -M' # default
+#set -g mouse-select-window on # incompatible in tmux 2.1+
+bind -T root MouseDown1Status select-window -t= # default
+
+# Wheel scroll in pane
+unbind -T root WheelUpPane
+unbind -T root WheelDownPane
+# Do mouse wheel-up to enter copy mode and do page-up
+# https://groups.google.com/d/msg/tmux-users/XTrSVUR15Zk/3iyJLMyQ7PwJ
+# Below binding did not work
+#   bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'if -Ft= "#{pane_in_mode}" "copy-mode -u" "send-keys -M"' 'copy-mode -u'
+# Below works and allows the WheelUpPane binding in emacs-copy table to be effective
+bind -T root WheelUpPane if -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= "#{pane_in_mode}" "send-keys -M" "copy-mode -u"'
+# |---------------------+-----------------------------------------+--------------------------------|
+# | using mouse? AND .. | #{pane_in_mode} (already in copy-mode?) | action                         |
+# |---------------------+-----------------------------------------+--------------------------------|
+# | Yes                 | Don't care                              | Send the mode keys             |
+# | No                  | Yes                                     | Send the mode keys             |
+# | No                  | No                                      | Enable copy-mode and do PageUp |
+# |---------------------+-----------------------------------------+--------------------------------|
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+set -g @shell_mode 'vi'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
